完成上半部分

--- a/index.html
+++ b/index.html
@@ -235,55 +235,233 @@
             </div>
         </div>
 
-        <div class="blbl-combine">
+        <div class="blbl-combine flex items-center justify-between">
             <!-- 综合 -->
-            <div class="blbl-category">
+            <div class="blbl-category flex items-center">
                 <!-- 分类区 -->
-                <div class="popular">
+                <div class="popular flex items-center">
                     <!-- 动态和热门 -->
-                     <div>
-                        <div>
-                            <img src="" alt="">
-                            <span>动态</span>
-                        </div>
-                     </div>
-                     <div>
-                        <div>
-                            <img src="" alt="">
-                            <span>热门</span>
-                        </div>
-                     </div>
+                    <div class="popular-items">
+                        <img src="./img/热门.png" alt="">
+                        <span>动态</span>
+                    </div>
+                    <div class="popular-items">
+                        <img src="./img/动态.jpg" alt="">
+                        <span>热门</span>
+                    </div>
                 </div>
                 <div class="channel">
                     <!-- 频道 -->
-                    <!-- 番剧
-                    电影
-                    国创
-                    电视剧
-                    综艺
-                    纪录片
-                    动画
-                    游戏
-                    鬼畜
-                    音乐
-                    舞蹈
-                    影视
-                    娱乐
-                    知识
-                    科技数码
-                    资讯
-                    美食
-                    小剧场
-                    汽车
-                    时尚美妆
-                    体育运动
-                    动物
-                    vlog
-                    更多 -->
+
+                    <a href="">
+                        <div class="channel-box">番剧</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">电影</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">国创</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">电视剧</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">综艺</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">纪录片</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">动画</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">游戏</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">鬼畜</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">音乐</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">舞蹈</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">影视</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">娱乐</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">知识</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">科技数码</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">资讯</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">美食</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">小剧场</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">汽车</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">时尚美妆</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">体育运动</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">动物</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">vlog</div>
+                    </a>
+                    <a href="">
+                        <div class="channel-box">更多</div>
+                    </a>
                 </div>
             </div>
-            <div class="">
-                分类
+            <div class="minor-category">
+                <!-- 分类 -->
+                <a class="minor-category-box flex justify-end items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 24 24" width="24" height="24" class="side-icon"><!--[-->
+                        <path d="M0 0L24 0L24 24L0 24L0 0z" fill="#F7F7F703"></path>
+                        <path
+                            d="M18 4.8L6 4.8C5.33726 4.8 4.8 5.33726 4.8 6L4.8 18C4.8 18.66276 5.33726 19.2 6 19.2L18 19.2C18.66276 19.2 19.2 18.66276 19.2 18L19.2 6C19.2 5.33726 18.66276 4.8 18 4.8z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M4 5.99998C4 4.89541 4.89544 3.99997 6 3.99997L18 3.99997C19.1046 3.99997 20.00004 4.89541 20.00004 5.99998L20.00004 18C20.00004 19.1046 19.1046 19.99992 18 19.99992L6 19.99992C4.89544 19.99992 4 19.1046 4 18L4 5.99998zM6 5.59998C5.77909 5.59998 5.6 5.77907 5.6 5.99998L5.6 18C5.6 18.22092 5.77908 18.39996 6 18.39996L18 18.39996C18.22092 18.39996 18.39996 18.22092 18.39996 18L18.39996 5.99998C18.39996 5.77906 18.22092 5.59998 18 5.59998L6 5.59998z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M15.99996 11.19931L8 11.19931C7.55818 11.19931 7.2 11.55749 7.2 11.99932C7.2 12.44112 7.55818 12.79932 8 12.79932L15.99996 12.79932C16.4418 12.79932 16.8 12.44112 16.8 11.99932C16.8 11.55749 16.4418 11.19931 15.99996 11.19931z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M15.99996 8.00062L8 8.00062C7.55818 8.00062 7.2 8.35878 7.2 8.80061C7.2 9.24244 7.55818 9.60061 8 9.60061L15.99996 9.60061C16.4418 9.60061 16.8 9.24244 16.8 8.80061C16.8 8.35878 16.4418 8.00062 15.99996 8.00062z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M11.2 14.4L8 14.4C7.55818 14.4 7.2 14.7582 7.2 15.20004C7.2 15.64188 7.55818 15.99996 8 15.99996L11.2 15.99996C11.64182 15.99996 12 15.64188 12 15.20004C12 14.7582 11.64182 14.4 11.2 14.4z"
+                            fill="#ffffffff"></path><!--]-->
+                    </svg>
+                    <span>专栏</span>
+                </a>
+                <a class="minor-category-box flex justify-end items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 24 24" width="24" height="24" class="side-icon"><!--[-->
+                        <path d="M0 0L24 0L24 24L0 24L0 0z" fill="#F7F7F703"></path>
+                        <path
+                            d="M18 4.8L6 4.8C5.33726 4.8 4.8 5.33726 4.8 6L4.8 18C4.8 18.66276 5.33726 19.2 6 19.2L18 19.2C18.66276 19.2 19.2 18.66276 19.2 18L19.2 6C19.2 5.33726 18.66276 4.8 18 4.8z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M4 5.99998C4 4.89541 4.89544 3.99997 6 3.99997L18 3.99997C19.1046 3.99997 20.00004 4.89541 20.00004 5.99998L20.00004 18C20.00004 19.1046 19.1046 19.99992 18 19.99992L6 19.99992C4.89544 19.99992 4 19.1046 4 18L4 5.99998zM6 5.59998C5.77909 5.59998 5.6 5.77907 5.6 5.99998L5.6 18C5.6 18.22092 5.77908 18.39996 6 18.39996L18 18.39996C18.22092 18.39996 18.39996 18.22092 18.39996 18L18.39996 5.99998C18.39996 5.77906 18.22092 5.59998 18 5.59998L6 5.59998z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M15.99996 11.19931L8 11.19931C7.55818 11.19931 7.2 11.55749 7.2 11.99932C7.2 12.44112 7.55818 12.79932 8 12.79932L15.99996 12.79932C16.4418 12.79932 16.8 12.44112 16.8 11.99932C16.8 11.55749 16.4418 11.19931 15.99996 11.19931z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M15.99996 8.00062L8 8.00062C7.55818 8.00062 7.2 8.35878 7.2 8.80061C7.2 9.24244 7.55818 9.60061 8 9.60061L15.99996 9.60061C16.4418 9.60061 16.8 9.24244 16.8 8.80061C16.8 8.35878 16.4418 8.00062 15.99996 8.00062z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M11.2 14.4L8 14.4C7.55818 14.4 7.2 14.7582 7.2 15.20004C7.2 15.64188 7.55818 15.99996 8 15.99996L11.2 15.99996C11.64182 15.99996 12 15.64188 12 15.20004C12 14.7582 11.64182 14.4 11.2 14.4z"
+                            fill="#ffffffff"></path><!--]-->
+                    </svg>
+                    <span>专栏</span>
+                </a>
+                <a class="minor-category-box flex justify-end items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 24 24" width="24" height="24" class="side-icon"><!--[-->
+                        <path d="M0 0L24 0L24 24L0 24L0 0z" fill="#F7F7F703"></path>
+                        <path
+                            d="M18 4.8L6 4.8C5.33726 4.8 4.8 5.33726 4.8 6L4.8 18C4.8 18.66276 5.33726 19.2 6 19.2L18 19.2C18.66276 19.2 19.2 18.66276 19.2 18L19.2 6C19.2 5.33726 18.66276 4.8 18 4.8z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M4 5.99998C4 4.89541 4.89544 3.99997 6 3.99997L18 3.99997C19.1046 3.99997 20.00004 4.89541 20.00004 5.99998L20.00004 18C20.00004 19.1046 19.1046 19.99992 18 19.99992L6 19.99992C4.89544 19.99992 4 19.1046 4 18L4 5.99998zM6 5.59998C5.77909 5.59998 5.6 5.77907 5.6 5.99998L5.6 18C5.6 18.22092 5.77908 18.39996 6 18.39996L18 18.39996C18.22092 18.39996 18.39996 18.22092 18.39996 18L18.39996 5.99998C18.39996 5.77906 18.22092 5.59998 18 5.59998L6 5.59998z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M15.99996 11.19931L8 11.19931C7.55818 11.19931 7.2 11.55749 7.2 11.99932C7.2 12.44112 7.55818 12.79932 8 12.79932L15.99996 12.79932C16.4418 12.79932 16.8 12.44112 16.8 11.99932C16.8 11.55749 16.4418 11.19931 15.99996 11.19931z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M15.99996 8.00062L8 8.00062C7.55818 8.00062 7.2 8.35878 7.2 8.80061C7.2 9.24244 7.55818 9.60061 8 9.60061L15.99996 9.60061C16.4418 9.60061 16.8 9.24244 16.8 8.80061C16.8 8.35878 16.4418 8.00062 15.99996 8.00062z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M11.2 14.4L8 14.4C7.55818 14.4 7.2 14.7582 7.2 15.20004C7.2 15.64188 7.55818 15.99996 8 15.99996L11.2 15.99996C11.64182 15.99996 12 15.64188 12 15.20004C12 14.7582 11.64182 14.4 11.2 14.4z"
+                            fill="#ffffffff"></path><!--]-->
+                    </svg>
+                    <span>专栏</span>
+                </a>
+                <a class="minor-category-box flex justify-end items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 24 24" width="24" height="24" class="side-icon"><!--[-->
+                        <path d="M0 0L24 0L24 24L0 24L0 0z" fill="#F7F7F703"></path>
+                        <path
+                            d="M18 4.8L6 4.8C5.33726 4.8 4.8 5.33726 4.8 6L4.8 18C4.8 18.66276 5.33726 19.2 6 19.2L18 19.2C18.66276 19.2 19.2 18.66276 19.2 18L19.2 6C19.2 5.33726 18.66276 4.8 18 4.8z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M4 5.99998C4 4.89541 4.89544 3.99997 6 3.99997L18 3.99997C19.1046 3.99997 20.00004 4.89541 20.00004 5.99998L20.00004 18C20.00004 19.1046 19.1046 19.99992 18 19.99992L6 19.99992C4.89544 19.99992 4 19.1046 4 18L4 5.99998zM6 5.59998C5.77909 5.59998 5.6 5.77907 5.6 5.99998L5.6 18C5.6 18.22092 5.77908 18.39996 6 18.39996L18 18.39996C18.22092 18.39996 18.39996 18.22092 18.39996 18L18.39996 5.99998C18.39996 5.77906 18.22092 5.59998 18 5.59998L6 5.59998z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M15.99996 11.19931L8 11.19931C7.55818 11.19931 7.2 11.55749 7.2 11.99932C7.2 12.44112 7.55818 12.79932 8 12.79932L15.99996 12.79932C16.4418 12.79932 16.8 12.44112 16.8 11.99932C16.8 11.55749 16.4418 11.19931 15.99996 11.19931z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M15.99996 8.00062L8 8.00062C7.55818 8.00062 7.2 8.35878 7.2 8.80061C7.2 9.24244 7.55818 9.60061 8 9.60061L15.99996 9.60061C16.4418 9.60061 16.8 9.24244 16.8 8.80061C16.8 8.35878 16.4418 8.00062 15.99996 8.00062z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M11.2 14.4L8 14.4C7.55818 14.4 7.2 14.7582 7.2 15.20004C7.2 15.64188 7.55818 15.99996 8 15.99996L11.2 15.99996C11.64182 15.99996 12 15.64188 12 15.20004C12 14.7582 11.64182 14.4 11.2 14.4z"
+                            fill="#ffffffff"></path><!--]-->
+                    </svg>
+                    <span>专栏</span>
+                </a>
+                <a class="minor-category-box bigger flex justify-end items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 24 24" width="24" height="24" class="side-icon"><!--[-->
+                        <path d="M0 0L24 0L24 24L0 24L0 0z" fill="#F7F7F703"></path>
+                        <path
+                            d="M18 4.8L6 4.8C5.33726 4.8 4.8 5.33726 4.8 6L4.8 18C4.8 18.66276 5.33726 19.2 6 19.2L18 19.2C18.66276 19.2 19.2 18.66276 19.2 18L19.2 6C19.2 5.33726 18.66276 4.8 18 4.8z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M4 5.99998C4 4.89541 4.89544 3.99997 6 3.99997L18 3.99997C19.1046 3.99997 20.00004 4.89541 20.00004 5.99998L20.00004 18C20.00004 19.1046 19.1046 19.99992 18 19.99992L6 19.99992C4.89544 19.99992 4 19.1046 4 18L4 5.99998zM6 5.59998C5.77909 5.59998 5.6 5.77907 5.6 5.99998L5.6 18C5.6 18.22092 5.77908 18.39996 6 18.39996L18 18.39996C18.22092 18.39996 18.39996 18.22092 18.39996 18L18.39996 5.99998C18.39996 5.77906 18.22092 5.59998 18 5.59998L6 5.59998z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M15.99996 11.19931L8 11.19931C7.55818 11.19931 7.2 11.55749 7.2 11.99932C7.2 12.44112 7.55818 12.79932 8 12.79932L15.99996 12.79932C16.4418 12.79932 16.8 12.44112 16.8 11.99932C16.8 11.55749 16.4418 11.19931 15.99996 11.19931z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M15.99996 8.00062L8 8.00062C7.55818 8.00062 7.2 8.35878 7.2 8.80061C7.2 9.24244 7.55818 9.60061 8 9.60061L15.99996 9.60061C16.4418 9.60061 16.8 9.24244 16.8 8.80061C16.8 8.35878 16.4418 8.00062 15.99996 8.00062z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M11.2 14.4L8 14.4C7.55818 14.4 7.2 14.7582 7.2 15.20004C7.2 15.64188 7.55818 15.99996 8 15.99996L11.2 15.99996C11.64182 15.99996 12 15.64188 12 15.20004C12 14.7582 11.64182 14.4 11.2 14.4z"
+                            fill="#ffffffff"></path><!--]-->
+                    </svg>
+                    <span>社区中心</span>
+                </a>
+                <a class="minor-category-box bigger flex justify-end items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 24 24" width="24" height="24" class="side-icon"><!--[-->
+                        <path d="M0 0L24 0L24 24L0 24L0 0z" fill="#F7F7F703"></path>
+                        <path
+                            d="M18 4.8L6 4.8C5.33726 4.8 4.8 5.33726 4.8 6L4.8 18C4.8 18.66276 5.33726 19.2 6 19.2L18 19.2C18.66276 19.2 19.2 18.66276 19.2 18L19.2 6C19.2 5.33726 18.66276 4.8 18 4.8z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M4 5.99998C4 4.89541 4.89544 3.99997 6 3.99997L18 3.99997C19.1046 3.99997 20.00004 4.89541 20.00004 5.99998L20.00004 18C20.00004 19.1046 19.1046 19.99992 18 19.99992L6 19.99992C4.89544 19.99992 4 19.1046 4 18L4 5.99998zM6 5.59998C5.77909 5.59998 5.6 5.77907 5.6 5.99998L5.6 18C5.6 18.22092 5.77908 18.39996 6 18.39996L18 18.39996C18.22092 18.39996 18.39996 18.22092 18.39996 18L18.39996 5.99998C18.39996 5.77906 18.22092 5.59998 18 5.59998L6 5.59998z"
+                            fill="#61666Dff"></path>
+                        <path
+                            d="M15.99996 11.19931L8 11.19931C7.55818 11.19931 7.2 11.55749 7.2 11.99932C7.2 12.44112 7.55818 12.79932 8 12.79932L15.99996 12.79932C16.4418 12.79932 16.8 12.44112 16.8 11.99932C16.8 11.55749 16.4418 11.19931 15.99996 11.19931z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M15.99996 8.00062L8 8.00062C7.55818 8.00062 7.2 8.35878 7.2 8.80061C7.2 9.24244 7.55818 9.60061 8 9.60061L15.99996 9.60061C16.4418 9.60061 16.8 9.24244 16.8 8.80061C16.8 8.35878 16.4418 8.00062 15.99996 8.00062z"
+                            fill="#ffffffff"></path>
+                        <path
+                            d="M11.2 14.4L8 14.4C7.55818 14.4 7.2 14.7582 7.2 15.20004C7.2 15.64188 7.55818 15.99996 8 15.99996L11.2 15.99996C11.64182 15.99996 12 15.64188 12 15.20004C12 14.7582 11.64182 14.4 11.2 14.4z"
+                            fill="#ffffffff"></path><!--]-->
+                    </svg>
+                    <span>新歌热榜</span>
+                </a>
+                
             </div>
         </div>
     </div>
