轮播图的修改，一些css设置

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         </div>
         <div class="blbl-main">
             <div class="lunbo">
-                <img src="" alt="">
+                <img src="./img/法喜寺2.jpg" alt="">
             </div>
             <div class="test">2</div>
             <div class="test">3</div>
